Update Logging auf slf4j

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -75,7 +75,7 @@
                         </goals>
                         <phase>compile</phase>
                         <configuration>
-                            <arguments>run build</arguments>
+                            <arguments>run build -- --base-href /</arguments>
                         </configuration>
                     </execution>
 
