--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -22,11 +22,6 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.0.0</version>
-                </plugin>
-
-                <plugin>
                     <groupId>com.github.eirslett</groupId>
                     <artifactId>frontend-maven-plugin</artifactId>
                     <version>1.6</version>
@@ -44,28 +39,29 @@
                     <nodeVersion>v6.11.4</nodeVersion>
                     <npmVersion>5.4.2</npmVersion>
                     <workingDirectory>src/main</workingDirectory>
+                    <installDirectory>../../xxx</installDirectory>
                 </configuration>
                 <executions>
 
-                    <execution>
-                        <id>npm install to clean</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                            <goal>npm</goal>
-                        </goals>
-                        <phase>pre-clean</phase>
-                        <configuration>
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
+                    <!--<execution>-->
+                        <!--&lt;!&ndash; optional: you don't really need execution ids, but it looks nice in your build log. &ndash;&gt;-->
+                        <!--<id>install node and npm</id>-->
+                        <!--<goals>-->
+                            <!--<goal>install-node-and-npm</goal>-->
+                        <!--</goals>-->
+                        <!--&lt;!&ndash; optional: default phase is "generate-resources" &ndash;&gt;-->
+                        <!--<phase>post-clean</phase>-->
+                    <!--</execution>-->
 
-                    <execution>
-                        <id>npm install to compile</id>
+                    <execution><id>npm install</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
                             <goal>npm</goal>
                         </goals>
                         <phase>initialize</phase>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
                     </execution>
 
                     <execution>
@@ -73,7 +69,7 @@
                         <goals>
                             <goal>npm</goal>
                         </goals>
-                        <phase>compile</phase>
+                        <phase>generate-resources</phase>
                         <configuration>
                             <arguments>run build -- --base-href /</arguments>
                         </configuration>
