--- a/infrastruktur/src/main/resources/config.properties
+++ b/infrastruktur/src/main/resources/config.properties
@@ -1,2 +1,3 @@
 service.version=${project.version}
 service.name=${project.artifactId}
+vertx.logger-delegate-factory-class-name=io.vertx.core.logging.SLF4JLogDelegateFactory
