--- a/infrastruktur/src/main/resources/vertx-default-jul-logging.properties
+++ b/infrastruktur/src/main/resources/vertx-default-jul-logging.properties
@@ -7,10 +7,9 @@ java.util.logging.FileHandler.formatter=io.vertx.core.logging.impl.VertxLoggerFo
 
 # Put the log in the system temporary directory
 java.util.logging.FileHandler.pattern=%t/vertx.log
-
-.level=INFO
+.level=SEVERE
 io.vertx.ext.web.level=INFO
 io.vertx.level=INFO
 com.hazelcast.level=INFO
 io.netty.util.internal.PlatformDependent.level=SEVERE
-com.github.haschi.haushaltsbuch.infrastruktur.level=INFO
+com.github.haschi.haushaltsbuch.infrastruktur.level=SEVERE
