--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -24,7 +24,8 @@
         <cukes.artefactId>info.cukes</cukes.artefactId>
         <assertj.version>3.8.0</assertj.version>
         <vertx.verticle>com.github.haschi.haushaltsbuch.infrastruktur.RestApi</vertx.verticle>
-        <vertx.launcher>com.github.haschi.haushaltsbuch.infrastruktur.RestApi</vertx.launcher>
+        <!--<vertx.launcher>com.github.haschi.haushaltsbuch.infrastruktur.RestApi</vertx.launcher>-->
+        <debug.port>8001</debug.port>
         <kotlin.version>1.2.10</kotlin.version>
         <serialization.version>0.2</serialization.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -57,12 +58,6 @@
                 <groupId>org.axonframework</groupId>
                 <artifactId>axon-core</artifactId>
                 <version>${axon.version}</version>
-                <!--<exclusions>-->
-                <!--<exclusion>-->
-                <!--<groupId>org.slf4j</groupId>-->
-                <!--<artifactId>slf4j-api</artifactId>-->
-                <!--</exclusion>-->
-                <!--</exclusions>-->
             </dependency>
 
             <dependency>
@@ -191,10 +186,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>io.vertx</groupId>-->
-        <!--<artifactId>vertx-rx</artifactId>-->
-        <!--</dependency>-->
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
