--- a/frontend/src/main/package.json
+++ b/frontend/src/main/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "^2.0.8",
     "ng2-currency-mask": "^4.4.1",
     "redux": "^3.7.2",
+    "redux-observable": "^0.17.0",
     "rxjs": "5.5.6",
     "zone.js": "0.8.14"
   },
