--- a/frontend/src/main/package.json
+++ b/frontend/src/main/package.json
@@ -35,6 +35,7 @@
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
     "rxjs": "5.5.6",
+    "uuid": "^3.1.0",
     "zone.js": "0.8.14"
   },
   "devDependencies": {
