--- a/core/pom.xml
+++ b/core/pom.xml
@@ -144,6 +144,12 @@
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-js</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
@@ -224,6 +230,25 @@
                             </sourceDirs>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>compile-js</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>js</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <source>
+                                    src/main/kotlin/com/github/haschi/dominium/haushaltsbuch/core/model/miapi
+                                </source>
+                            </sourceDirs>
+                            <moduleKind>commonjs</moduleKind>
+                            <sourceMap>true</sourceMap>
+                            <sourceMapEmbedSources>inlining</sourceMapEmbedSources>
+                            <outputFile>/target/js</outputFile>
+                        </configuration>
+                    </execution>
+
                     <execution>
                         <id>test-compile</id>
                         <phase>test-compile</phase>
