--- a/core/pom.xml
+++ b/core/pom.xml
@@ -142,11 +142,11 @@
             <version>${kotlin.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-js</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.jetbrains.kotlin</groupId>-->
+            <!--<artifactId>kotlin-stdlib-js</artifactId>-->
+            <!--<version>${kotlin.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -230,25 +230,20 @@
                             </sourceDirs>
                         </configuration>
                     </execution>
-                    <execution>
-                        <id>compile-js</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>js</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <source>
-                                    src/main/kotlin/com/github/haschi/dominium/haushaltsbuch/core/model/miapi
-                                </source>
-                            </sourceDirs>
-                            <!--<metaInfo>false</metaInfo>-->
-                            <!--<moduleKind>amd</moduleKind>-->
-                            <!--<sourceMap>false</sourceMap>-->
-                            <!--<sourceMapEmbedSources>inlining</sourceMapEmbedSources>-->
-                            <!--<outputFile>${project.build.directory}/jjs</outputFile>-->
-                        </configuration>
-                    </execution>
+                    <!--<execution>-->
+                        <!--<id>compile-js</id>-->
+                        <!--<phase>compile</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>js</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<sourceDirs>-->
+                                <!--<source>-->
+                                    <!--src/main/kotlin/com/github/haschi/dominium/haushaltsbuch/core/model/miapi-->
+                                <!--</source>-->
+                            <!--</sourceDirs>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
 
                     <execution>
                         <id>test-compile</id>
