--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,7 +21,7 @@
         <!-- Das muss woanders hin -->
         <axon.version>3.1</axon.version>
         <version.maven-surefire-plugin>2.18.1</version.maven-surefire-plugin>
-        <kotlin.version>1.2.10</kotlin.version>
+        <kotlin.version>1.2.20</kotlin.version>
     </properties>
 
     <scm>
@@ -138,7 +138,7 @@
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jre8</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
 
@@ -262,6 +262,7 @@
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
