--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -26,7 +26,7 @@
         <vertx.verticle>com.github.haschi.haushaltsbuch.infrastruktur.RestApi</vertx.verticle>
         <!--<vertx.launcher>com.github.haschi.haushaltsbuch.infrastruktur.RestApi</vertx.launcher>-->
         <debug.port>8001</debug.port>
-        <kotlin.version>1.2.10</kotlin.version>
+        <kotlin.version>1.2.20</kotlin.version>
         <serialization.version>0.2</serialization.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
@@ -119,12 +119,6 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jetbrains.kotlinx</groupId>
-                <artifactId>kotlinx-serialization-runtime</artifactId>
-                <version>${serialization.version}</version>
             </dependency>
 
         </dependencies>
@@ -307,7 +301,7 @@
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jre8</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
 
@@ -322,11 +316,6 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-serialization-runtime</artifactId>
         </dependency>
 
         <dependency>
@@ -440,19 +429,7 @@
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
-
-                    <compilerPlugins>
-                        <plugin>kotlinx-serialization</plugin>
-                    </compilerPlugins>
-
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlinx</groupId>
-                        <artifactId>kotlinx-maven-serialization-plugin</artifactId>
-                        <version>0.2</version>
-                    </dependency>
-                </dependencies>
             </plugin>
 
             <plugin>
@@ -477,20 +454,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>bintray-kotlin-kotlinx</id>
-            <name>bintray</name>
-            <url>https://dl.bintray.com/kotlin/kotlinx</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>bintray-kotlin-kotlinx</id>
-            <name>bintray</name>
-            <url>https://dl.bintray.com/kotlin/kotlinx</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
