--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <name>Infrastruktur</name>
     <packaging>jar</packaging>
-    <artifactId>haushaltsbuch-backend</artifactId>
+    <artifactId>haushaltsbuch-infrastructure</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
