--- a/ui/backend/pom.xml
+++ b/ui/backend/pom.xml
@@ -84,6 +84,19 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.datatype</groupId>-->
+            <!--<artifactId>jackson-datatype-json-org</artifactId>-->
+            <!--&lt;!&ndash;<version>${jackson.version}</version>&ndash;&gt;-->
+            <!--<version>2.9.0</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr353</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.haschi.haushaltsbuch</groupId>
             <artifactId>haushaltsbuch-frontend</artifactId>
@@ -93,6 +106,12 @@
         <dependency>
             <groupId>com.github.haschi.haushaltsbuch</groupId>
             <artifactId>haushaltsbuch-core</artifactId>
+            <version>CD-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.haschi.haushaltsbuch</groupId>
+            <artifactId>haushaltsbuch-infrastructure</artifactId>
             <version>CD-SNAPSHOT</version>
         </dependency>
 
@@ -130,6 +149,7 @@
             <version>2.2.8</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
