--- a/pom.xml
+++ b/pom.xml
@@ -140,9 +140,37 @@
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>2.10</version>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.complykit</groupId>
+                    <artifactId>license-check-maven-plugin</artifactId>
+                    <version>0.5.3</version>
+                    <configuration>
+                        <blacklist>
+                            <param>agpl-3.0</param> <!--exclude affero-->
+                            <param>gpl-2.0</param> <!--exclude gpl 2-->
+                            <param>gpl-3.0</param> <!--exclude gpl 3-->
+                        </blacklist>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>os-check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
             </plugins>
         </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.14</version>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
