--- a/ui/backend/pom.xml
+++ b/ui/backend/pom.xml
@@ -150,6 +150,11 @@
             <scope>test</scope>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId></groupId>-->
+            <!--<artifactId></artifactId>-->
+        <!--</dependency>-->
+
     </dependencies>
 
     <build>
