--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -265,9 +265,9 @@
                 <version>2.20.1</version>
                 <configuration>
                     <systemPropertyVariables>
-                        <cucumber.api.java.ObjectFactory>
-                            com.github.haschi.haushaltsbuch.infrastruktur.SystemtestPicoFactory
-                        </cucumber.api.java.ObjectFactory>
+                        <!--<cucumber.api.java.ObjectFactory>-->
+                            <!--com.github.haschi.haushaltsbuch.infrastruktur.SystemtestPicoFactory-->
+                        <!--</cucumber.api.java.ObjectFactory>-->
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
