--- a/ui/backend/src/main/resources/application.properties
+++ b/ui/backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 debug=false
-logging.level.org.springframework.web=INFO
+logging.level.root=INFO
+spring.main.banner-mode=log
+haushaltsbuch.version=@project.version@
+haushaltsbuch.name=@project.name@
+haushaltsbuch.timestamp=@maven.build.timestamp@
