--- a/ui/backend/pom.xml
+++ b/ui/backend/pom.xml
@@ -10,7 +10,7 @@
     <version>CD-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Backend</name>
+    <name>Haushaltsbuch Service</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
