dominium-15 Voreinstellungen für Logging im Backend Server

--- a/testit/pom.xml
+++ b/testit/pom.xml
@@ -30,6 +30,8 @@
         <rest-assured.version>3.0.7</rest-assured.version>
         <jackson.version>2.9.4</jackson.version>
         <assertj.version>3.9.1</assertj.version>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     </properties>
 
     <dependencies>
@@ -159,6 +161,13 @@
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
+
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
 
         <pluginManagement>
             <plugins>
