--- a/ui/backend/pom.xml
+++ b/ui/backend/pom.xml
@@ -30,6 +30,9 @@
 
         <junit-jupiter.version>5.0.1</junit-jupiter.version>
         <junit-platform.version>1.0.1</junit-platform.version>
+
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     </properties>
 
     <dependencies>
