dominium-44 Create LICENSE

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,15 @@
         <kotlin.version>1.2.30</kotlin.version>
     </properties>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
     <scm>
         <developerConnection>scm:git:http://localhost/matthias/haushaltsbuch.git
         </developerConnection>
