dominium-49 CI machen Spezifikation des Build in .travis.yml Umstellung der Frontend-Tests auf PhantomJS

--- a/ui/frontend/pom.xml
+++ b/ui/frontend/pom.xml
@@ -82,7 +82,7 @@
                         </goals>
                         <phase>test</phase>
                         <configuration>
-                            <arguments>run test -- --browsers=Chrome --singleRun=true</arguments>
+                            <arguments>run test -- --browsers=PhantomJS --singleRun=true</arguments>
                         </configuration>
                     </execution>
                 </executions>
