--- a/ui/frontend/src/main/package.json
+++ b/ui/frontend/src/main/package.json
@@ -54,8 +54,10 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-scss-preprocessor": "^3.0.0",
     "node-sass": "4.7.2",
+    "phantomjs-prebuilt": "^2.1.16",
     "protractor": "5.2.2",
     "ts-node": "4.1.0",
     "tslint": "5.8.0",
